[gd_scene load_steps=3 format=3 uid="uid://d2cnei32wxgem"]

[ext_resource type="Script" path="res://Scenes/DATA.gd" id="1_pimlg"]
[ext_resource type="Script" path="res://Scenes/CODE.gd" id="2_5v22e"]

[node name="Root" type="Node2D"]

[node name="Pos" type="Marker2D" parent="."]
position = Vector2(323, 482)

[node name="ColorRect" type="ColorRect" parent="Pos"]
offset_right = 10.0
offset_bottom = 10.0
color = Color(0.235294, 0.0705882, 0.72549, 1)

[node name="Sprite2D" type="Sprite2D" parent="Pos"]

[node name="DATA" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("1_pimlg")

[node name="CODE" type="Node" parent="."]
script = ExtResource("2_5v22e")

[node name="NEW" type="Button" parent="."]
offset_left = 29.0
offset_top = 21.0
offset_right = 115.0
offset_bottom = 64.0
text = "NEW"

[node name="LOAD" type="Button" parent="."]
offset_left = 28.0
offset_top = 74.0
offset_right = 139.0
offset_bottom = 117.0
text = "LOAD PICS"

[node name="LOAD3" type="Button" parent="."]
offset_left = 129.0
offset_top = 20.0
offset_right = 240.0
offset_bottom = 63.0
text = "LOAD ROOT"

[node name="LOAD4" type="Button" parent="."]
offset_left = 247.0
offset_top = 21.0
offset_right = 358.0
offset_bottom = 64.0
text = "SAVE ROOT"

[node name="SAVE" type="Button" parent="."]
offset_left = 27.0
offset_top = 124.0
offset_right = 132.0
offset_bottom = 167.0
text = "SAVE PICS"

[node name="Label2" type="Label" parent="."]
offset_left = 970.0
offset_top = 12.0
offset_right = 1133.0
offset_bottom = 47.0
text = "Number of Pictures:"

[node name="picturesize" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 743.0
offset_top = 13.0
offset_right = 955.0
offset_bottom = 48.0
text = "0"
horizontal_alignment = 2

[node name="ADD" type="Button" parent="."]
offset_left = 1009.0
offset_top = 550.0
offset_right = 1124.0
offset_bottom = 586.0
text = "Add Picture"

[node name="REMOVE" type="Button" parent="."]
offset_left = 1003.0
offset_top = 597.0
offset_right = 1133.0
offset_bottom = 631.0
text = "Remove Picture"

[node name="Label4" type="Label" parent="."]
offset_left = 1100.0
offset_top = 40.0
offset_right = 1125.0
offset_bottom = 69.0
text = "id:"
horizontal_alignment = 2

[node name="id" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 874.0
offset_top = 41.0
offset_right = 1089.0
offset_bottom = 82.0
text = "0"
horizontal_alignment = 2

[node name="FilePathLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 150.0
offset_top = 588.0
offset_right = 787.0
offset_bottom = 624.0
text = "NOT USED"

[node name="LOAD2" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a File"
position = Vector2i(150, 100)
size = Vector2i(800, 500)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.json")

[node name="LOADpictures" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a File"
position = Vector2i(150, 100)
size = Vector2i(858, 500)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.png")

[node name="LOADRoot" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a Directory"
position = Vector2i(100, 100)
size = Vector2i(978, 500)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2

[node name="SAVE2" type="FileDialog" parent="."]
unique_name_in_owner = true
position = Vector2i(150, 100)
size = Vector2i(978, 500)
ok_button_text = "Guardar"
access = 2
filters = PackedStringArray("*.json")

[node name="ROOT" type="Button" parent="."]
offset_left = 25.0
offset_top = 588.0
offset_right = 135.0
offset_bottom = 627.0
text = "SET ROOT"

[node name="Pictures" type="RichTextLabel" parent="."]
unique_name_in_owner = true
offset_left = 162.0
offset_top = 76.0
offset_right = 1110.0
offset_bottom = 527.0

[connection signal="button_up" from="NEW" to="CODE" method="_on_new_button_up"]
[connection signal="button_up" from="LOAD" to="CODE" method="_on_load_button_up"]
[connection signal="button_up" from="LOAD3" to="CODE" method="LOADROOT"]
[connection signal="button_up" from="LOAD4" to="CODE" method="SAVEROOT"]
[connection signal="button_up" from="SAVE" to="CODE" method="SAVE"]
[connection signal="button_up" from="ADD" to="CODE" method="_on_add_button_up"]
[connection signal="file_selected" from="LOAD2" to="CODE" method="_on_load_2_file_selected"]
[connection signal="file_selected" from="LOADpictures" to="CODE" method="select"]
[connection signal="dir_selected" from="LOADRoot" to="CODE" method="DIRSELECT"]
[connection signal="file_selected" from="SAVE2" to="CODE" method="_on_save_2_file_selected"]
[connection signal="button_up" from="ROOT" to="CODE" method="ROOTFOLDER"]
